# cmpt201-coursework

./: README.md  lab8.c  trail_shell.c
.nvim/: trial_shell.c.2026-02-18T08:08:05-08:00.nvim  trial_shell.c.2026-02-18T08:59:57-08:00.hash
a10/.nvim/: CMakeList.txt.2026-03-12T13:23:11-07:00.hash
a9/: CMakeLists.txt  a9.c  alloc.c
a9/.nvim/: a9.c.2026-02-26T11:30:12-08:00.hash
a9/include/.nvim/: alloc.h.2026-02-26T13:15:45-08:00.hash  alloc.h.2026-02-27T14:06:18-08:00.hash  alloc.h.2026-02-27T14:06:18-08:00.nvim  alloc.h.2026-02-27T14:07:41-08:00.hash  alloc.h.2026-02-27T14:07:41-08:00.nvim  alloc.h.2026-02-27T14:18:37-08:00.hash  alloc.h.2026-02-27T14:18:37-08:00.nvim  alloc.h.2026-02-27T14:20:48-08:00.hash  alloc.h.2026-02-27T14:20:48-08:00.nvim  alloc.h.2026-02-27T14:22:30-08:00.hash  alloc.h.2026-02-27T14:22:30-08:00.nvim  alloc.h.2026-02-27T19:13:22-08:00.hash  alloc.h.2026-02-27T19:13:22-08:00.nvim
a9/src/: alloc.c
a9/src/.nvim/: alloc.c.2026-02-27T20:17:48-08:00.hash  alloc.c.2026-02-27T20:17:48-08:00.nvim
lab0/: lab0.c
lab0/.nvim/: lab0.c.2026-01-17T16:30:36-08:00.hash  lab0.c.2026-01-17T16:30:36-08:00.nvim
lab1/: lab1.c
lab1/.nvim/: lab1.c.2026-01-18T13:30:06-08:00.hash
lab2/: lab2.c
lab2/.nvim/: lab2.c.2026-01-24T18:42:57-08:00.hash  lab2.c.2026-01-24T18:42:57-08:00.nvim  lab2.c.2026-01-24T18:52:34-08:00.hash  lab2.c.2026-01-24T18:52:34-08:00.nvim  lab2.c.2026-01-24T18:54:18-08:00.hash  lab2.c.2026-01-24T18:54:18-08:00.nvim  lab2.c.2026-01-24T18:56:16-08:00.hash  (+2 more)
lab3/: lab3.c
lab6/: example3  example3.c  example_1.c
(+6 files in other folders)
